header bug fixed, header, home and tour ready on mobile and desktop

--- a/css/global.css
+++ b/css/global.css
@@ -14,7 +14,7 @@ h1, h2{
     color: var(--colorSecondary);
 }
 
-h1, h2, h3, nav a{
+h1, h2, h3, h4, h5, nav a{
     font-family: var(--fontMain);
 }
 
@@ -41,5 +41,13 @@ a{
 @media (min-width: 1200px) {
     *{
         max-width: 1280px;
+    }
+
+    h1{
+        font-size: 48px;
+    }
+
+    h2{
+        font-size: 28px;
     }
 }
