--- a/css/header.css
+++ b/css/header.css
@@ -1,4 +1,4 @@
-header .center{
+.header-title{
     text-align: center;
 }
 
@@ -41,16 +41,28 @@ nav ul li a{
 
     .header-tristan{
         display: flex;
-        width: 30%;
+        width: 15%;
     }
 
-    header .center{
+    .header-tristan img{
+        border-radius: 50%;
+        max-width: 128px;
+        width: 100%;
+    }
+
+    .header-title{
         display:inline-block;
-        width: 50%
+        width: 70%
     }
 
     .options{
-        width: 20%;
+        width: 15%;
+        justify-content: flex-end;
+        padding: 3rem 2rem;
+    }
+
+    .language{
+        margin: 0 auto;
     }
 
     nav{
